@@ -1,8 +1,2 @@
 SUBDIRS	= data src test wrap
 
-test:
-	( cd test/ && make test )
-
-
-.PHONY: test
-
